1px correction on min-width media queries so they never overlap the max-width ones

--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -90,17 +90,17 @@
     content: "small layout";
   }
 }
-@media screen and (min-width: 600px) and (max-width: 1000px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
   .header .mode:after {
     content: "medium layout";
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1400px) {
+@media screen and (min-width: 1001px) and (max-width: 1400px) {
   .header .mode:after {
     content: "large layout";
   }
 }
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1401px) {
   .header .mode:after {
     content: "extra large layout";
   }
