--- a/docs/css/grid-fluid.css
+++ b/docs/css/grid-fluid.css
@@ -251,7 +251,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 1000px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
   .ft-grid-row {
     max-width: none;
   }
@@ -318,7 +318,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1400px) {
+@media screen and (min-width: 1001px) and (max-width: 1400px) {
   .ft-grid-row {
     max-width: none;
   }
@@ -385,7 +385,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1401px) {
   .ft-grid-row {
     max-width: 1360px;
   }
