--- a/docs/css/grid-responsive.css
+++ b/docs/css/grid-responsive.css
@@ -247,7 +247,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 1000px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
   .ft-grid-row {
     max-width: 780px;
   }
@@ -314,7 +314,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1400px) {
+@media screen and (min-width: 1001px) and (max-width: 1400px) {
   .ft-grid-row {
     max-width: 960px;
   }
@@ -381,7 +381,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1401px) {
   .ft-grid-row {
     max-width: 1360px;
   }
